# mcp-sequel

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
mcp_sequel/: config.py  pool.py  query_guard.py  server.py  tunnel.py
mcp_sequel/adapters/: __init__.py  base.py  mysql.py  sqlite.py
tests/: test_config_ssh.py  test_tunnel.py
tests/adapters/: test_base.py  test_mysql.py  test_sqlite.py
